# cpp_project

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  README.md  conanfile.py
include/mylib/: my_class.h  my_other_class.h
src/: CMakeLists.txt  another_lib_source.cpp  another_lib_source.h  lib_source.cpp  lib_source.h  lib_source_a.cpp  lib_source_b.cpp  my_class.cpp  my_other_class.cpp
src/cmake/: cpp_project-config.cmake
src/include/cpp_project/: lib_source_a.h  lib_source_b.h
test/: CMakeLists.txt  another_test_source.cpp  my_class.test.cpp  my_other_class.test.cpp  test_source.cpp  test_source_a.cpp  test_source_b.cpp
test_package/: CMakeLists.txt  conanfile.py  test_package.cpp
